feat: simplified funds graph and fixed some issues
    - feat: refresh XIRR when receiving funds data
    - feat(api): add XIRR to funds data response
    - fix: erroneous tick generation on data refresh
    - feat: optional sort by gain (absolute value) on funds page
    - fix: limit X position of hover label taking into account padding size
    - feat: immediately change select values on funds graph
    - feat: single graph hover label
    - feat: select instead of click to change funds graph mode
    - feat: fixed fund graph widebar width
    - feat: abbrevate fund names in graph sidebar
    - fix: allow setting fund query options in all data route
    - chore: removed unused zoom code
    - feat: removed zoom capability from funds graph
